tests/NormalTests/paczka1/fuzzy1/78404529.err
Error in line 2: XcSR02 S897 76,4
Error in line 5: XcSR02 A783 93,7
Error in line 6: XcSR02 S480 65,1
Error in line 3: 6pywKeY S897 40,3
Error in line 16: 3xMTjD S480 53,4
Error in line 17: 6pywKeY S480 106,1
Error in line 21: 6pywKeY A783 27,4
Error in line 35: 6pywKeY S480 61,26
Error in line 30: 6pywKeY S897 32,4
Error in line 27: XcSR02 S897 69,2
